--- a/notebooks/codecontests_exploration.ipynb
+++ b/notebooks/codecontests_exploration.ipynb
@@ -19,18 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
-    "from evaluation.code_execution import evaluate_sample_codecontests, evaluate_python_code_exec, print_code_snippet, ProblemSource, Difficulty, Language"
+    "from evaluation.code_execution import evaluate_python_code_exec, print_code_snippet, ProblemSource, Difficulty, Language"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 13328/13328 [01:07<00:00, 196.65it/s, n_samples=5213]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "console = Console()\n",
     "\n",
@@ -111,13 +103,28 @@
     "            \"source\": problem_source,\n",
     "            \"difficulty\": difficulty,\n",
     "        }\n",
-    "        for key in (\"name\", \"description\", \"public_tests\", \"private_tests\", \"cf_rating\", \"cf_points\", \"solutions\"):\n",
+    "        for key in (\n",
+    "            \"name\",\n",
+    "            \"description\",\n",
+    "            \"public_tests\",\n",
+    "            \"private_tests\",\n",
+    "            \"cf_rating\",\n",
+    "            \"cf_points\",\n",
+    "        ):\n",
     "            sample_to_keep[key] = sample[key]\n",
+    "        alL_solutions = [\n",
+    "            solution_code\n",
+    "            for lang_txt, solution_code in zip(\n",
+    "                sample[\"solutions\"][\"language\"], sample[\"solutions\"][\"solution\"] # type: ignore\n",
+    "            )\n",
+    "            if Language(lang_txt) == Language.PYTHON3\n",
+    "        ]\n",
+    "        sample_to_keep[\"solution\"] = alL_solutions[0]\n",
     "        first_n_samples.append(sample_to_keep)\n",
-    "    \n",
+    "\n",
     "    iterator.set_postfix({\"n_samples\": len(first_n_samples)})\n",
     "\n",
-    "    if len(first_n_samples) > 10000:\n",
+    "    if len(first_n_samples) > 2500:\n",
     "        break\n",
     "\n",
     "first_n_df = pd.DataFrame(first_n_samples)"
@@ -136,27 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Creating parquet from Arrow format: 100%|██████████| 6/6 [00:13<00:00,  2.23s/ba]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3776445852"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "for col in first_n_df.columns:\n",
@@ -168,65 +157,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'source': 2,\n",
-       " 'difficulty': 11,\n",
-       " 'name': '1037_E. Trips',\n",
-       " 'description': \"There are n persons who initially don't know each other. On each morning, two of them, who were not friends before, become friends.\\n\\nWe want to plan a trip for every evening of m days. On each trip, you have to select a group of people that will go on the trip. For every person, one of the following should hold: \\n\\n  * Either this person does not go on the trip, \\n  * Or at least k of his friends also go on the trip. \\n\\n\\n\\nNote that the friendship is not transitive. That is, if a and b are friends and b and c are friends, it does not necessarily imply that a and c are friends.\\n\\nFor each day, find the maximum number of people that can go on the trip on that day.\\n\\nInput\\n\\nThe first line contains three integers n, m, and k (2 ≤ n ≤ 2 ⋅ 10^5, 1 ≤ m ≤ 2 ⋅ 10^5, 1 ≤ k < n) — the number of people, the number of days and the number of friends each person on the trip should have in the group.\\n\\nThe i-th (1 ≤ i ≤ m) of the next m lines contains two integers x and y (1≤ x, y≤ n, x≠ y), meaning that persons x and y become friends on the morning of day i. It is guaranteed that x and y were not friends before.\\n\\nOutput\\n\\nPrint exactly m lines, where the i-th of them (1≤ i≤ m) contains the maximum number of people that can go on the trip on the evening of the day i.\\n\\nExamples\\n\\nInput\\n\\n4 4 2\\n2 3\\n1 2\\n1 3\\n1 4\\n\\n\\nOutput\\n\\n0\\n0\\n3\\n3\\n\\n\\nInput\\n\\n5 8 2\\n2 1\\n4 2\\n5 4\\n5 2\\n4 3\\n5 1\\n4 1\\n3 2\\n\\n\\nOutput\\n\\n0\\n0\\n0\\n3\\n3\\n4\\n4\\n5\\n\\n\\nInput\\n\\n5 7 2\\n1 5\\n3 2\\n2 5\\n3 4\\n1 2\\n5 3\\n1 3\\n\\n\\nOutput\\n\\n0\\n0\\n0\\n0\\n3\\n4\\n4\\n\\nNote\\n\\nIn the first example, \\n\\n  * 1,2,3 can go on day 3 and 4. \\n\\n\\n\\nIn the second example, \\n\\n  * 2,4,5 can go on day 4 and 5. \\n  * 1,2,4,5 can go on day 6 and 7. \\n  * 1,2,3,4,5 can go on day 8. \\n\\n\\n\\nIn the third example, \\n\\n  * 1,2,5 can go on day 5. \\n  * 1,2,3,5 can go on day 6 and 7. \",\n",
-       " 'public_tests': {'input': ['4 4 2\\n2 3\\n1 2\\n1 3\\n1 4\\n',\n",
-       "   '5 8 2\\n2 1\\n4 2\\n5 4\\n5 2\\n4 3\\n5 1\\n4 1\\n3 2\\n',\n",
-       "   '5 7 2\\n1 5\\n3 2\\n2 5\\n3 4\\n1 2\\n5 3\\n1 3\\n'],\n",
-       "  'output': ['0\\n0\\n3\\n3\\n',\n",
-       "   '0\\n0\\n0\\n3\\n3\\n4\\n4\\n5\\n',\n",
-       "   '0\\n0\\n0\\n0\\n3\\n4\\n4\\n']},\n",
-       " 'private_tests': {'input': ['16 20 2\\n10 3\\n5 3\\n10 5\\n12 7\\n7 6\\n9 12\\n9 6\\n1 10\\n11 16\\n11 1\\n16 2\\n10 2\\n14 4\\n15 14\\n4 13\\n13 15\\n1 8\\n7 15\\n1 7\\n8 15\\n',\n",
-       "   '2 1 1\\n2 1\\n'],\n",
-       "  'output': ['0\\n0\\n3\\n3\\n3\\n3\\n7\\n7\\n7\\n7\\n7\\n11\\n11\\n11\\n11\\n15\\n15\\n15\\n15\\n16\\n',\n",
-       "   '2\\n']},\n",
-       " 'cf_rating': 2200,\n",
-       " 'cf_points': 2250.0}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_df = Dataset.from_parquet(\"../dataset_samples/codeforces_problems_subset.parquet\")\n",
+    "test_df = Dataset.from_parquet(\"dataset_samples/codeforces_problems_subset.parquet\")\n",
     "test_df[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Creating parquet from Arrow format: 100%|██████████| 3/3 [00:00<00:00, 26.19ba/s]\n",
-      "Uploading the dataset shards: 100%|██████████| 1/1 [00:00<00:00,  3.67it/s]\n",
-      "No files have been modified since last commit. Skipping to prevent empty commit.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/datasets/roborovski/codeforces_problems_subset/commit/cbfb4e8e4e87b814a2dc27dcd3ba81608cb2ddbf', commit_message='Upload dataset', commit_description='', oid='cbfb4e8e4e87b814a2dc27dcd3ba81608cb2ddbf', pr_url=None, repo_url=RepoUrl('https://huggingface.co/datasets/roborovski/codeforces_problems_subset', endpoint='https://huggingface.co', repo_type='dataset', repo_id='roborovski/codeforces_problems_subset'), pr_revision=None, pr_num=None)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_df.push_to_hub(\"codeforces_problems_subset\")\n"
    ]
